force-app/main/default/objects/ContractOpportunityLink__c/ContractOpportunityLink__c.object-meta.xml
<CustomObject>
    <label>Contract Opportunity Link</label>
    <nameField>
        <displayFormat>COL-{0}</displayFormat>
        <label>Contract Opportunity Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Opportunity Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>