force-app/main/default/objects/ContractOpportunityLink__c/fields/New_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>New_Pricing_Model__c</fullName>
    <label>New Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Inclusive</fullName>
            </value>
            <value>
                <fullName>CBP</fullName>
            </value>
            <value>
                <fullName>User Payments</fullName>
            </value>
            <value>
                <fullName>Foodservice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>