force-app/main/default/objects/ContractOpportunityLink__c/fields/New_Service_Model__c.field-meta.xml
<CustomField>
    <fullName>New_Service_Model__c</fullName>
    <label>New Service Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bevi Basic</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Partial Service</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>