force-app/main/default/objects/ContractOpportunityLink__c/fields/Quote_Order_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Quote_Order_Numbers__c</fullName>
    <label>Quote Order Numbers</label>
    <type>TextArea</type>
</CustomField>